--- a/BinanceTrader/BinanceTrader/BinanceTrader.csproj
+++ b/BinanceTrader/BinanceTrader/BinanceTrader.csproj
@@ -119,6 +119,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Settings.cs" />
     <Page Include="Controls\TickerList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
