--- a/BinanceTrader/BinanceTrader/packages.config
+++ b/BinanceTrader/BinanceTrader/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net471" />
+  <package id="ScottPlot" version="4.0.48" targetFramework="net471" />
+  <package id="ScottPlot.WPF" version="4.0.48" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net471" />
   <package id="System.Memory" version="4.5.4" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
