仮想購入に削除機能を追加

--- a/BinanceTrader/BinanceTrader/BinanceTrader.csproj
+++ b/BinanceTrader/BinanceTrader/BinanceTrader.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controls\Chart.xaml.cs">
       <DependentUpon>Chart.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Common\ContextMenuCommand.cs" />
     <Compile Include="Controls\Converters\Converters.cs" />
     <Compile Include="Controls\Utilitys\Utilitys.cs" />
     <Compile Include="Controls\VirtualPurchaseList.xaml.cs">
