自動更新機能の追加など

--- a/BinanceTrader/BinanceTrader/BinanceTrader.csproj
+++ b/BinanceTrader/BinanceTrader/BinanceTrader.csproj
@@ -129,6 +129,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\AlertList.xaml.cs">
+      <DependentUpon>AlertList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Chart.xaml.cs">
       <DependentUpon>Chart.xaml</DependentUpon>
     </Compile>
@@ -144,6 +147,10 @@
     </Compile>
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Settings.cs" />
+    <Page Include="Controls\AlertList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Chart.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
