--- a/BinanceTrader/BinanceTrader/BinanceTrader.csproj
+++ b/BinanceTrader/BinanceTrader/BinanceTrader.csproj
@@ -146,6 +146,9 @@
       <DependentUpon>VirtualPurchaseList.xaml</DependentUpon>
     </Compile>
     <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Services\ServiceManager.cs" />
+    <Compile Include="Services\AutoAlertService.cs" />
+    <Compile Include="Services\Common\ServiceBase.cs" />
     <Compile Include="Settings.cs" />
     <Page Include="Controls\AlertList.xaml">
       <SubType>Designer</SubType>
